--- a/assetts/css/style.css
+++ b/assetts/css/style.css
@@ -1,3 +1,16 @@
 .style{
 	color:blue;
 }
+
+.style p{
+	font-size: 20px
+}
+
+.style img{
+/*	height:100%;
+	width:100%;*/
+
+	height:500px;
+	width:500px;
+
+}
